--- a/01-组件版本和集群环境.md
+++ b/01-组件版本和集群环境.md
@@ -6,10 +6,10 @@ tags: kubernetes, environment
 
 ## 集群组件和版本
 
-+ Kubernetes 1.6.2
++ Kubernetes 1.7.6
 + Docker  17.04.0-ce
 + Etcd 3.1.6
-+ Flanneld 0.7.1 vxlan 网络
++ Calico 2.5.1 网络
 + TLS 认证通信 (所有组件，如 etcd、kubernetes master 和 node)
 + RBAC 授权
 + kubelet TLS BootStrapping
